--- a/kuaixia_privacy.html
+++ b/kuaixia_privacy.html
@@ -20,6 +20,7 @@
                 <b>二、用户个人隐私信息保护</b><br/>
                 1、app目前接入了友盟SDK，用于统计分析解析或下载失败的网站，sdk本身会收集设备信息（IMEI/IDFA/OpenUDID/GUID/SIM卡IMSI/地理位置等），可查看其<a href="https://www.umeng.com/page/policy">隐私权政策</a> <br/>
                 2、除此外app本身只会请求网络权限，如果会请求其它权限可能是某些网站自身的请求，与app无关，可酌情拒绝 <br/>
+                3、用户的所有数据都存在本地数据库中，不会上传网络，下载的视频文件存在缓存目录下，当存储不够时会被系统自动清理
                 &nbsp;<br/>
                 <b>三、使用规则</b><br/>
                 1、用户可使用本app来解析网站中的视频链接，然后可以存储该链接并使用系统播放器进行播放。也可以下载某些视频，但所有内容都存储在用户设备上，不会进行上传。用户需自己对下载内容负责，对于无版权的内容不得进行侵权和恶意传播，开发者对此不承担任何责任。 <br/>
